--- a/index.html
+++ b/index.html
@@ -1,37 +1,127 @@
-## Welcome to GitHub Pages
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Traditional Saudi Rice and Chicken</title>
+    <link rel="stylesheet" href="recipe.css">
+</head>
+<body>
+    <div class="kabsa image">
+    <h1 class="headingmain">Traditional Saudi Kabsa</h1>
+    <img src="https://img-global.cpcdn.com/recipes/34a4f228d0523116/751x532cq70/saudi-chicken-kabsa-recipe-main-photo.jpg" 
+    alt="" width="500" >
+    </div>
+    <p>Prep: 40 mins</p>
+    <p>1 hr 30 Min - Cook time</p>
+    <p>2 hrs 10 mins - Total</p>
+    <p>8 Servings</p>
+    <hr>
+<article>
+    <div>
+        <h2 class="headingres">INGREDIENTS</h2>
+        <ul class="ingredient">
+            <li> <sup>1</sup>/ <sub>2</sub> <span class="tooltip">tbsp <span class="tooltiptext">teaspoon</span></span>dried whole lime powder</li> 
+            <li><sup>1</sup>/ <sub>2</sub> <span class="tooltip">tbsp <span class="tooltiptext">teaspoon</span></span> ground allspice</li>
+            <li>2 <span class="tooltip">tbsp <span class="tooltiptext">teaspoon</span></span> all-purpose flour</li>
+            <li><sup>1</sup>/ <sub>2</sub> <span class="tooltip">tbsp <span class="tooltiptext">teaspoon</span></span> ground cinnamon</li>
+            <li>1 onion, finely chopped</li>
+            <li><sup>1</sup>/ <sub>4</sub> <span class="tooltip">tbsp <span class="tooltiptext">teaspoon</span></span> ground cardamom</li>
+            <li><sup>1</sup>/ <sub>2</sub> <span class="tooltip">tbsp <span class="tooltiptext">teaspoon</span></span>saffron</li>
+            <li>1 (3 pound) whole chicken, cut into 8 pieces</li>
+            <li><sup>1</sup>/ <sub>4</sub> <span class="tooltip">tbsp <span class="tooltiptext">teaspoon</span></span> ground white pepper</li>
+            <li> 1 pinch ground cumin </li>
+            <li>1 pinch ground coriander</li>
+            <li>3 <sup>1</sup>/ <sub>4</sub> cups of water</li>
+            <li>1 cube chicken bouillon</li>
+            <li> <sup>1</sup>/ <sub>4</sub> cup tomato puree</li>
+        
+        </ul>
+    </div>
+    <hr>
+    <div>
+    <h2 class="headingres">DIRECTIONS</h2>
 
-You can use the [editor on GitHub](https://github.com/Khamis39/myyyyy/edit/gh-pages/index.md) to maintain and preview the content for your website in Markdown files.
+    <ol>
+        <li class="order">First Stap: 
+            <ul>
+                <li>Mix together the saffron, cardamom, cinnamon, allspice, white pepper, and lime powder  
+                    in a small bowl, and set the spice mix aside.</li>
+            </ul>
+        </li>
+        <li class="order">Second Step:
+            <ul>
+                <li>Melt the butter in a large stock pot or Dutch oven over medium heat. Stir in the  
+                    garlic and  onion; cook and stir until the onion has softened and turned translucent, 
+                    about 5 minutes. Add the chicken pieces and brown them over medium-high heat until 
+                    lightly browned, about 10 minutes. Mix in the tomato puree.</li>
+            </ul>
+        </li>
+        <li class="order">Third Step:
+            <ul>
+                <li>Stir in the canned tomatoes with their juice, the grated carrots, whole cloves, 
+                    nutmeg, cumin, coriander, salt, black pepper, and the Kabsa spice mix. Cook for about 
+                    3 minutes; pour in the water, and add the chicken bouillon cube. </li>
+            </ul>
+        </li>
+        <li class="order">Fourth Step:
+            <ul>
+                <li>Bring the sauce to a boil, then reduce the heat to simmer and cover the pot. Simmer 
+                    until chicken is no longer pink and the juices run clear, about 30 minutes.</li>
+            </ul>
+        </li>
+        <li class="order">Fifth Step:
+            <ul>
+                <li>Gently stir in the rice. Cover the pot and simmer until rice is tender and almost dry, 
+                    about 25 minutes; add the raisins and a little more hot water, if necessary. Cover and 
+                    cook for an additional 5 to 10 minutes or until the rice grains are separate.</li>
+            </ul>
+        </li>
+    </ol>
 
-Whenever you commit to this repository, GitHub Pages will run [Jekyll](https://jekyllrb.com/) to rebuild the pages in your site, from the content in your Markdown files.
+    </div>
+    <p>This is our favorite recipe here at Saudi Kabsa. It has been enjoyed by Kabsa fans for many years. 
+        We hope you'll find that this recipe is delicious and also easy to follow; 
+        it's a piece of <del>cake</del> Kabsa!</p>
+        <hr>
+    </article>
+    <div class="comments">
+        <h2 class="headingres">USER COMMENTS</h2>
+        <p> This is a very fun recipe to follow, because family makes it sweet and simple. 
+            This Kabsa is yummy !!!</p>
 
-### Markdown
+         <p>- Ahmad S.</p>
+         <p>Q: Is there another recipe similar to Kabsa? <br>
+            A: Bukhari Rice.</p>
+            <p>- Mohammed A.</p>
 
-Markdown is a lightweight and easy-to-use syntax for styling your writing. It includes conventions for
+            <p>This site can really engage my interest. Follow the recipe above and make it so! 
+                This Kabsa is number one.</p>
+            <p>- Adil Ghalib</p>
 
-```markdown
-Syntax highlighted code block
+            <p>I like Saudi Kabsa, the best of it kind. &#128523;</p>
+            <p>-Muhammad Khamis</p>
+    </div>
+    <div>
+        <h2 class="headingres">LINKS</h2>
+        <a href="http://www.google.com/search?q=Saudi+Kabsa+recipe&start=10">Search for other Kabsa Rice recipes </a>
+        <a href="index.html"></a>
+        <br>
+        <a href="N_day.html">Saudi Arabia National Day</a>
+        <br>
+        <a href="https://validator.w3.org/#validate_by_input" >
+        <img src="https://fiverr-res.cloudinary.com/images/t_main1,q_auto,f_auto,q_auto,f_auto/gigs/78500861/original/ee1278a136a5219d748492391a0852a6e6d5d9fc/validate-your-html-and-css-code-by-w3c-d1028293-de8f-4a11-86a7-a4d93fb2b313.png" alt="HTML validator" width="150"
+        >
+        </a>
+        <a href="http://jigsaw.w3.org/css-validator/#validate_by_input">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS0EWOFQ__xBGNyBNGiEZzSHXVhcHsHE8UxFw&usqp=CAU" alt="CSS Validator" width="150">
+        </a>
+    </div>
 
-# Header 1
-## Header 2
-### Header 3
-
-- Bulleted
-- List
-
-1. Numbered
-2. List
-
-**Bold** and _Italic_ and `Code` text
-
-[Link](url) and ![Image](src)
-```
-
-For more details see [GitHub Flavored Markdown](https://guides.github.com/features/mastering-markdown/).
-
-### Jekyll Themes
-
-Your Pages site will use the layout and styles from the Jekyll theme you have selected in your [repository settings](https://github.com/Khamis39/myyyyy/settings). The name of this theme is saved in the Jekyll `_config.yml` configuration file.
-
-### Support or Contact
-
-Having trouble with Pages? Check out our [documentation](https://docs.github.com/categories/github-pages-basics/) or [contact support](https://github.com/contact) and we’ll help you sort it out.
+    <footer>
+        Copyright &copy; 2020 Saudi's Kabsa
+        Allrecipes Kabsa Production
+           All rights reserved       
+    </footer>
+</body>
+</html>
